--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,7 @@
 @import "owl/_carousel";				// OWL Carousel styling
 @import "owl/_theme";					// OWL Carousel theme styling
 @import "owl/_transitions";				// OWL Carousel transitions styling
+@import "base";								// Base style
 
 #intro-slide-box {
 	background: url(../img/index-bg.jpg) no-repeat center center fixed;
