--- a/src/templates/actions.html
+++ b/src/templates/actions.html
@@ -1,4 +1,4 @@
-<ion-view title="Actions" ng-controller="Actions">
+<ion-view title="Actions">
 	<ion-content class="padding-vertical">
 		<div ng-repeat="action in actions">
 			<div class="col-lg-50" on-hold="actionHold(action)">
