--- a/src/templates/add-action.html
+++ b/src/templates/add-action.html
@@ -1,4 +1,4 @@
-<ion-view title="Add New Action" ng-controller="addAction">
+<ion-view title="Add New Action">
 	<ion-content>
 		<form name="addActionForm" ng-init="setFormScope(this)" data-ng-submit="actionSubmit()">
 			<div class="list" style="background:#ffffff;">
