--- a/src/templates/add-device.html
+++ b/src/templates/add-device.html
@@ -1,4 +1,4 @@
-<ion-view title="Add New Device" ng-controller="addDevice">
+<ion-view title="Add New Device">
 	<ion-content>
 		<form name="addDeviceForm" ng-init="setFormScope(this)" data-ng-submit="deviceSubmit()">
 			<div class="list" style="background:#ffffff;">
