--- a/src/templates/add-location.html
+++ b/src/templates/add-location.html
@@ -1,4 +1,4 @@
-<ion-view title="Add New Location" ng-controller="addLocation">
+<ion-view title="Add New Location">
 	<ion-content>
 		<form name="addLocationForm" ng-init="setFormScope(this)" data-ng-submit="locationSubmit()">
 			<div class="list">
