--- a/src/templates/charts.html
+++ b/src/templates/charts.html
@@ -1,4 +1,4 @@
-<ion-view title="Charts" ng-controller="Charts">
+<ion-view title="Charts">
 	<ion-content class="padding">
 		<div class="row chart-wrap">
 			<div class="col">
