--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,4 +1,4 @@
-<ion-view title="Dashboard" ng-controller="Dashboard">
+<ion-view title="Dashboard">
 	<ion-tabs class="nav-title-slide-ios7 tabs-striped tabs-icon-top tabs-top tabs-background-light tabs-balanced" animation="nav-title-slide-ios7">
 		<ion-tab title="Home" icon-on="ion-ios7-home" icon-off="ion-ios7-home-outline" href="#/route/dashboard/home">
 			<ion-nav-view name="home-tab"></ion-nav-view>
