--- a/src/templates/intro.html
+++ b/src/templates/intro.html
@@ -1,4 +1,4 @@
-<ion-view title="Intro" ng-controller="Intro">
+<ion-view title="Intro">
 	<ion-content padding="false">
 		<ion-slide-box id="intro-slide-box" show-pager="false">
 			<ion-slide>
