--- a/src/templates/add-user.html
+++ b/src/templates/add-user.html
@@ -1,4 +1,4 @@
-<ion-view title="Add New User" ng-controller="addUser">
+<ion-view title="Add New User">
 	<ion-content>
 		<form name="addUserForm" ng-init="setFormScope(this)" data-ng-submit="userSubmit()">
 			<div class="list">
