--- a/src/templates/side-menu-left.html
+++ b/src/templates/side-menu-left.html
@@ -22,15 +22,15 @@ cx<ion-side-menus>
 					<i class="icon ion-ios7-speedometer-outline"></i>
 					Dashboard
 				</a>
-				<a menu-close class="item item-icon-left" href="#/route/charts">
+				<!-- <a menu-close class="item item-icon-left" href="#/route/charts">
 					<i class="icon ion-ios7-pie"></i>
 					Charts
-				</a>
-				<a menu-close class="item item-icon-left" href="#/route/actions">
+				</a> -->
+				<!-- <a menu-close class="item item-icon-left" href="#/route/actions">
 					<i class="icon ion-flash"></i>
 					Actions
 					<span class="badge badge-balanced">{{actions.length}}</span>
-				</a>
+				</a> -->
 				<a menu-close class="item item-icon-left" href="#/route/devices">
 					<i class="icon ion-network"></i>
 					Devices
@@ -53,9 +53,13 @@ cx<ion-side-menus>
 					<i class="icon ion-fork-repo"></i>
 					Add Device
 				</a>
-				<a menu-close class="item item-icon-left" href="#/route/add-action">
+				<!-- <a menu-close class="item item-icon-left" href="#/route/add-action">
 					<i class="icon ion-ios7-plus-empty"></i>
 					Add Action
+				</a> -->
+				<a menu-close class="item item-icon-left" href="#/route/add-product">
+					<i class="icon ion-ios7-plus-empty"></i>
+					Add Product
 				</a>
 				<a menu-close class="item item-icon-left" href="#/route/add-location">
 					<i class="icon ion-ios7-plus-empty"></i>
