--- a/src/templates/device-single.html
+++ b/src/templates/device-single.html
@@ -1,40 +1,19 @@
-<ion-view title="{{device.name}}">
+<ion-view title="{{device.devicename}}">
 	<ion-content class="padding">
-		<div ng-if="device.id === null">
+		<div ng-if="device.tagid === null">
 			<h5 class="text-center">No Devices to Show</h5>
 		</div>
-		<div ng-if="device.id != null">
+		<!--<div ng-if="device.tagid != null">-->
+		<div>
+			<img ng-src="img/constitution-dg.png" style="margin-left:auto;display:block;margin-right:auto;width:40%;"/>
+			
 			<div class="list">
 				<div class="item item-icon-left">
 					<i class="icon" ng-class="device.icon"></i>
-					{{device.name}}
+					{{device.devicename}}
 					<span class="item-note">
 					{{device.status}}
 					</span>
-				</div>
-				<li ng-if="(actions | filter:{id:device.actionSelect})[0].type === 'range'" class="item">
-					{{ (actions | filter:{id:device.actionSelect})[0].name }}
-					<span class="item-note">
-						{{ (actions | filter:{id:device.actionSelect})[0].value }}{{ (actions | filter:{id:device.actionSelect})[0].units }}
-					</span>
-				</li>
-				<div ng-if="(actions | filter:{id:device.actionSelect})[0].type === 'range'" class="item range range-balanced">
-					<i class="icon" ng-class="(actions | filter:{id:device.actionSelect})[0].iconBefore"></i>
-					<input type="range"
-						ng-model="(actions | filter:{id:device.actionSelect})[0].value"
-						name="{{ (actions | filter:{id:device.actionSelect})[0].id }}_action"
-						min="{{ (actions | filter:{id:device.actionSelect})[0].minValue }}"
-						max="{{ (actions | filter:{id:device.actionSelect})[0].maxValue }}">
-					<i class="icon" ng-class="(actions | filter:{id:device.actionSelect})[0].iconAfter"></i>
-				</div>
-				<div ng-if="(actions | filter:{id:device.actionSelect})[0].type === 'toggle'" class="item item-toggle">
-					{{ (actions | filter:{id:device.actionSelect})[0].name }}
-					<label class="toggle toggle-balanced">
-					<input type="checkbox" ng-checked="(actions | filter:{id:device.actionSelect})[0].state === 'on'">
-					<div class="track">
-						<div class="handle"></div>
-					</div>
-					</label>
 				</div>
 				<div class="item item-divider">
 				Device Info
@@ -48,15 +27,16 @@
 						</div>
 					</label>
 				</li>
-				<div class="item item-divider">
-				Members
-				</div>
-				<div class="item item-thumbnail-left">
-					<img ng-src="{{(users | filter:{id:device.userSelect})[0].avatar}}">
-					<h2>{{(users | filter:{id:device.userSelect})[0].username}}</h2>
-					<p>{{(users | filter:{id:device.userSelect})[0].lastLogin}}</p>
-				</div>
 			</div>
+			<div class="padding">
+				<button class="button button-balanced">
+					Close
+				</button>
+				<button class="button button-balanced">
+					Restart
+				</button>
+			</div>
+			
 		</div>
 	</ion-content>
 </ion-view>
