--- a/src/templates/devices.html
+++ b/src/templates/devices.html
@@ -1,5 +1,11 @@
 <ion-view title="Devices">
 	<ion-content class="padding-vertical">
+		<ion-refresher pulling-text="Pull to refresh"
+	         refreshing-text="Loading..."
+	         refreshing-icon="ion-loading-c"
+	         pulling-icon="ion-ios7-arrow-thin-down"
+	         on-refresh="doRefresh()">
+        </ion-refresher>
 		<div class="padding-horizontal">	
 			<h4>Snapshots</h4>
 		</div>
@@ -26,11 +32,18 @@
 			<div class="col-lg-50">
 				<div class="item item-icon-left" on-tap="deviceTap('router.device', device)">
 					<i class="icon" ng-class="device.icon"></i>
-					{{ device.name }}
+					{{ device.devicename }}
 					<span class="item-note" ng-class="device.color">
 					{{ device.status }}
 					</span>
+					<ion-option-button class="button-positive"ng-click="">
+				      Share
+				    </ion-option-button>
+				    <ion-option-button class="button-info"ng-click="">
+				      Edit
+				    </ion-option-button>
 				</div>
+			    
 			</div>
 		</div>
 		<div class="clearfix"></div>
