--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,60 +2,14 @@
 	<ion-content>
 		<div class="row chart-wrap">
 			<div class="col">
-				<h4>Messages  (Per Second)</h4>
+				<h4>Messages</h4>
 				<canvas id="line" class="chart chart-line" data="data" options="options" labels="labels"></canvas>
 			</div>
 		</div>
-		<div class="padding">
-			<div class="item item-divider">
-			Featured Actions
-			</div>
-		</div>
-		<div ng-repeat="action in actions | filter: { featured: true}">
-			<div class="col-lg-50 padding-horizontal">
-				<li ng-if="action.type === 'range'" class="item">
-					{{ action.name }}
-					<span class="item-note">
-						{{ action.value }}{{ action.units }}
-					</span>
-				</li>
-				<div ng-if="action.type === 'range'" class="item range range-balanced">
-					<i class="icon" ng-class="action.iconBefore"></i>
-					<input type="range" ng-model="action.value" name="{{ action.id }}_action" min="{{ action.minValue }}" max="{{ action.maxValue }}">
-					<i class="icon" ng-class="action.iconAfter"></i>
-				</div>
-				<div ng-if="action.type === 'toggle'" class="item item-toggle">
-					{{ action.name }}
-					<label class="toggle toggle-balanced">
-					<input type="checkbox" ng-checked="action.state === 'on'">
-					<div class="track">
-						<div class="handle"></div>
-					</div>
-					</label>
-				</div>
-			</div>
-		</div>
 		<div class="clearfix"></div>
 		<div class="padding">
 			<div class="item item-divider">
-			Featured Places
-			</div>
-		</div>
-		<div ng-repeat="location in locations | filter: { featured: true}">
-			<div class="col-lg-50 padding-horizontal">
-				<div class="item item-icon-left">
-					<i class="icon" ng-class="location.icon"></i>
-					{{ location.name }}
-					<span class="item-note">
-					{{ location.note }}
-					</span>
-				</div>
-			</div>
-		</div>
-		<div class="clearfix"></div>
-		<div class="padding">
-			<div class="item item-divider">
-			Featured Devices
+				Featured Devices
 			</div>
 		</div>
 		<div ng-repeat="device in devices | filter: { featured: true}">
@@ -70,5 +24,22 @@
 			</div>
 		</div>
 		<div class="clearfix"></div>
+		<div class="padding">
+			<div class="item item-divider">
+				Messages
+			</div>
+		</div>
+		<div ng-repeat="msg in messages">
+			<div class="col-lg-50 padding-horizontal">
+				<div class="item item-icon-left">
+					<i class="icon" ng-class="device.icon"></i>
+					{{msg.message}}
+					<span class="item-note" ng-class="device.color">
+					{{ msg.device }}
+					</span>
+				</div>
+			</div>
+		</div>
+      </ion-list>
 	</ion-content>
 </ion-view>
