--- a/src/templates/intro.html
+++ b/src/templates/intro.html
@@ -25,11 +25,11 @@
 						<div class="list">
 							<label class="item item-input">
 								<span class="input-label">Username</span>
-								<input type="text">
+								<input ng-model="user.email" type="text">
 							</label>
 							<label class="item item-input">
 								<span class="input-label">Password</span>
-								<input type="password">
+								<input ng-model="user.password" type="password">
 							</label>
 						</div>
 						<div class="padding-bottom">
