--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -13,7 +13,7 @@
 					</div>
 				</label>
 			</li>
-			<li class="item item-toggle">
+			<!-- <li class="item item-toggle">
 				Location Services
 				<label class="toggle toggle-balanced">
 					<input type="checkbox">
@@ -21,7 +21,7 @@
 					<div class="handle"></div>
 					</div>
 				</label>
-			</li>
+			</li> -->
 			<li class="item item-toggle">
 				Use Google Maps
 				<label class="toggle toggle-balanced">
@@ -35,14 +35,14 @@
 				<span class="input-label">Google Maps API Key</span>
 				<input type="text" value="AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es">
 			</label>
-			<div class="item item-divider">
+			<!-- <div class="item item-divider">
 				Xively
 			</div>
 			<label class="item item-input">
 				<span class="input-label">Master Key</span>
 				<input type="text" value="a2PSG80FlQTbjENbanuMCAZyVhsHy2Z0AWuDHxTKtwtuP5k8">
-			</label>
-			<div class="item item-divider">
+			</label> -->
+			<!-- <div class="item item-divider">
 				API Settings
 			</div>
 			<label class="item item-radio">
@@ -67,7 +67,22 @@
 					<option>SOAP</option>
 					<option selected>REST</option>
 				</select>
-			</label>
+			</label> -->
+			
+			<div class="item item-divider">
+				Notifications
+			</div>
+			<li class="item item-checkbox">
+				<label class="item item-input">
+					<input type="text" placeholder="Email" >
+				</label>
+			</li>
+			<li class="item item-checkbox">
+				<label class="item item-input">
+					<input type="text" placeholder="Sms" >
+				</label>
+			</li>
+			
 			<div class="item item-divider">
 				Notifications Settings
 			</div>
@@ -83,12 +98,12 @@
 				</label>
 				Devices Notifications
 			</li>
-			<li class="item item-checkbox">
+			<!-- <li class="item item-checkbox">
 				<label class="checkbox">
 				<input type="checkbox" checked>
 				</label>
 				Users Notifications
-			</li>
+			</li> -->
 			<li class="item item-checkbox">
 				<label class="checkbox">
 				<input type="checkbox">
