--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,8 +32,12 @@
     <script type="text/javascript" src="js/SocketFactory.js"></script>
     <script type="text/javascript" src="js/services/Api.js"></script>
     <script type="text/javascript" src="js/services/Toaster.js"></script>
+    <script type="text/javascript" src="js/services/UserFactory.js"></script>
+    <script type="text/javascript" src="js/services/AuthInterceptor.js"></script>
+    <script type="text/javascript" src="js/services/AuthTokenFactory.js"></script>
     <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
     <!--<script src="cordova.js"></script>-->
+    <link rel="stylesheet" href="libs/angular-chart.js/angular-chart.css" />
     
 </head>
 <body ng-controller="MainCtrl">
@@ -50,11 +54,21 @@
     <script src="js/controllers/Actions.js"></script>
     <script src="js/controllers/addAction.js"></script>
     <script src="js/controllers/addDevice.js"></script>
-    <script src="js/controllers/addLocation.js"></script>
+    <script src="js/controllers/locations.js"></script>
+    <script src="js/controllers/addLocation.js"></script>c
+    <script src="js/controllers/editLocation.js"></script>c
     <script src="js/controllers/addProduct.js"></script>
     <script src="js/controllers/addUser.js"></script>
     <script src="js/controllers/Users.js"></script>
     <script src="js/controllers/Devices.js"></script>
+    <script src="js/controllers/settings.js"></script>
+    <script src="js/controllers/editDevice.js"></script>
+    <script src="js/controllers/Products.js"></script>
+    <script src="js/controllers/editProduct.js"></script>
+    
+    <!-- Services -->
+    <script src="js/services/shareComponentService.js"></script>
+ 
 
 </body>
 </html>
