--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,13 +1,12 @@
+
 <ion-view title="Dashboard">
-	<ion-tabs class="nav-title-slide-ios7 tabs-striped tabs-icon-top tabs-top tabs-background-light tabs-balanced" animation="nav-title-slide-ios7">
+	<ion-tabs class="tabs-icon-top" animation="nav-title-slide-ios7">
 		<ion-tab title="Home" icon-on="ion-ios7-home" icon-off="ion-ios7-home-outline" href="#/route/dashboard/home">
-			<ion-nav-view name="home-tab"></ion-nav-view>
+			<ion-nav-view name="home-tab">Home</ion-nav-view>
 		</ion-tab>
-		<!-- <ion-tab title="Favorites" icon-on="ion-ios7-star" icon-off="ion-ios7-star-outline" href="#/route/dashboard/favorites">
-			<ion-nav-view name="favorites-tab"></ion-nav-view>
-		</ion-tab> -->
 		<ion-tab title="Settings" icon-on="ion-ios7-settings-strong" icon-off="ion-ios7-settings" href="#/route/dashboard/settings">
-			<ion-nav-view name="settings-tab"></ion-nav-view>
+			<ion-nav-view name="settings-tab">Settings</ion-nav-view>
+			SETTINGS
 		</ion-tab>
 	</ion-tabs>
 </ion-view>
