--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,9 +1,20 @@
-<ion-view title="<img src='img/logo.png' class='img-responsive'>">	
+<ion-view view-title="<img src='img/logo.png' class='img-responsive'>">	
 	<ion-content>
+		<ion-refresher pulling-text="Pull to refresh"
+	         refreshing-text="Loading..."
+	         refreshing-icon="ion-loading-c"
+	         pulling-icon="ion-ios7-arrow-thin-down"
+	         on-refresh="doRefresh()">
+        </ion-refresher>
 		<div class="row chart-wrap">
 			<div class="col">
 				<h4>Messages</h4>
-				<canvas id="line" class="chart chart-line" data="data" options="options" labels="labels"></canvas>
+				<canvas id="line" class="chart chart-line" 
+						data="data" 
+						options="options" 
+						legend="true" 
+						labels="labels"
+						series="series"></canvas>
 			</div>
 		</div>
 		<div class="clearfix"></div>
