--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -1,21 +1,29 @@
 <ion-view title="Users" ng-controller="Users">
 	<ion-content class="padding-vertical">
+		
+		<ion-refresher
+	         refreshing-icon="ion-loading-c"
+	         pulling-icon="ion-ios7-arrow-thin-down"
+	         on-refresh="doRefresh()">
+        </ion-refresher>
+		
 		<div ng-repeat="user in users">
 			<div class="col-lg-33" on-hold="userHold(user)">
 				<div class="card">
 					<div class="item item-avatar">
-						<img ng-src="{{user.avatar}}">
+						<img ng-src="{{user.image}}">
 						<h2>{{ user.username }}</h2>
 						<p>{{user.lastLogin}} <span ng-show="user.lastLogin == 'Online'" class="balanced">&bull;</span></p>
 					</div>
-					<div ng-show="user.location == true" class="item item-image">
-						<div id="map_{{user.id}}" style="height: 150px;" data-tap-disabled="true"></div>
+					<div ng-show="user.showlocation == true" class="item item-image">
+						<!-- <div id="map_{{user.id}}" style="height: 150px;" data-tap-disabled="true"></div> -->
+						<div id="map_admin" style="height: 150px;" data-tap-disabled="true"></div>
 					</div>
 					<ul class="list">
 						<li class="item item-toggle">
 						User Enabled
 						<label class="toggle toggle-balanced">
-							<input type="checkbox" ng-checked="user.enabled == 'true'">
+							<input type="checkbox" ng-checked="user.enabled == 'true'" ng-click="getLocation()">
 							<div class="track">
 								<div class="handle"></div>
 							</div>
