--- a/src/templates/edit-device.html
+++ b/src/templates/edit-device.html
@@ -22,18 +22,21 @@
 				</div>
 				<label class="item item-input item-select">
 					<div class="input-label">
-					Select a Location
+					Select a Location 
 					</div>
-					<select ng-model="newdevice.devicelocation" ng-options="o.id as o.name for o in locations"></select>
+					<select ng-model="newdevice.devicelocation" ng-options="o._id as o.name for o in locationsList">
+					</select>
 				</label>
 				<div class="item item-divider">
 				Select Type
 				</div>
 				<label class="item item-input item-select">
 					<div class="input-label">
-					Type
+					Type 
 					</div>
-					<select ng-model="newdevice.type" ng-options="o.id as o.name for o in type"></select>
+					<select ng-model="newdevice.type" ng-options="o.name as o.name for o in typeList">
+														         
+					</select>
 				</label>
 				
 				<div ng-show="newdevice.type=='Slave'" >
@@ -42,9 +45,11 @@
 					</div>
 					<label class="item item-input item-select">
 						<div class="input-label">
-							Device
+							Device 
 						</div>
-						<select ng-model="newdevice.masterDevice" ng-options="o.name as o.name for o in devices"></select>
+						<select ng-model="newdevice.masterdevice" ng-options="o._id as o.devicename for o in deviceList">
+							<option value="">Select</option>
+						</select>
 					</label>
 				</div>
 				
@@ -63,7 +68,7 @@
 			</div>
 			<div class="padding">
 				<button class="button button-balanced">
-					Update Device
+					Update
 				</button>
 			</div>
 		</form>
