--- a/src/templates/edit-location.html
+++ b/src/templates/edit-location.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="padding">
 				<button class="button button-balanced">
-					Update Location
+					Update
 				</button>
 			</div>
 		</form>
