--- a/src/templates/locations.html
+++ b/src/templates/locations.html
@@ -30,7 +30,7 @@
 					<ion-option-button class="button-positive" ng-click="delete(location)">
 				      Delete
 				    </ion-option-button>
-				    <ion-option-button class="button-info" ng-click="deviceTap('router.editlocations',location)">
+				    <ion-option-button class="button-info" ng-click="deviceTap('router.editLocation',location)">
 				      Edit
 				    </ion-option-button>
 				    
