--- a/src/css/base.css
+++ b/src/css/base.css
@@ -17,3 +17,20 @@
   background-color: #ff4943;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
 }
+.bar-header-menu {
+  background-color: #ff4943!important;
+}
+.bar.bar-stable .title {
+  background-color: #ff4943;
+  color: #fff;
+}
+/*.badge.badge-balanced{
+  border-color: #ff4943;
+  background-color: #ff4943;
+  color: #fff;
+}
+
+.toggle.toggle-balanced input:checked + .track{
+  border-color: #ff4943;
+  background-color: #ff4943;
+}*/
