--- a/src/templates/add-user.html
+++ b/src/templates/add-user.html
@@ -29,7 +29,7 @@
 			</div>
 			<div class="padding">
 				<button class="button button-balanced">
-					Add User
+					Add
 				</button>
 			</div>
 		</form>
