--- a/src/templates/side-menu-left.html
+++ b/src/templates/side-menu-left.html
@@ -1,4 +1,4 @@
-cx<ion-side-menus>
+<ion-side-menus>
 	<ion-side-menu-content>
 		<ion-nav-bar class="bar-light" animation="nav-title-slide-ios7">
 			<ion-nav-back-button class="button-icon ion-arrow-left-c">
@@ -69,7 +69,6 @@ cx<ion-side-menus>
 					<i class="icon ion-ios7-personadd"></i>
 					Add User
 				</a>
-
 			</div>
 		</ion-content>
 	</ion-side-menu>
