--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <link href="libs/ionic/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    
     <script src="libs/chartjs/Chart.js"></script>
     <!--<script src="js/ionic.bundle.min.js"></script>-->
     <!--Angular and Dependancies-->
@@ -30,8 +31,10 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
     <script src="js/app.js"></script>
     <script type="text/javascript" src="js/SocketFactory.js"></script>
+
     <script type="text/javascript" src="js/services/Api.js"></script>
     <script type="text/javascript" src="js/services/Toaster.js"></script>
+<script type="text/javascript" src="js/services/LSFactory.js"></script>
     <script type="text/javascript" src="js/services/UserFactory.js"></script>
     <script type="text/javascript" src="js/services/AuthInterceptor.js"></script>
     <script type="text/javascript" src="js/services/AuthTokenFactory.js"></script>
@@ -55,8 +58,8 @@
     <script src="js/controllers/addAction.js"></script>
     <script src="js/controllers/addDevice.js"></script>
     <script src="js/controllers/locations.js"></script>
-    <script src="js/controllers/addLocation.js"></script>c
-    <script src="js/controllers/editLocation.js"></script>c
+    <script src="js/controllers/addLocation.js"></script>
+    <script src="js/controllers/editLocation.js"></script>
     <script src="js/controllers/addProduct.js"></script>
     <script src="js/controllers/addUser.js"></script>
     <script src="js/controllers/Users.js"></script>
@@ -68,6 +71,9 @@
     
     <!-- Services -->
     <script src="js/services/shareComponentService.js"></script>
+    <script src="js/services/storeService.js"></script>
+    
+    <script src="js/directives/mapXively.js"></script>
  
 
 </body>
